--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/usetube": "^2.1.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "usetube": "^2.1.4"
   }
 }
